Prepare build infrastructure for Panama Vector API